apps/agogos/platform/overlays/dev/api-config-revision.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agogos-api
spec:
  template:
    metadata:
      annotations:
        agogos.org/config-revision: 2026-10-08-email-secret-sync
