apps/agogos/platform/overlays/dev/api-email-secret.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agogos-api
spec:
  template:
    spec:
      containers:
        - name: api
