apps/agogos/platform/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: agogos-platform-web
  annotations:
    argocd.argoproj.io/sync-wave: '1'
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/limit-burst: '40'
    nginx.ingress.kubernetes.io/limit-rps: '20'
    nginx.ingress.kubernetes.io/proxy-body-size: '1m'
    nginx.ingress.kubernetes.io/proxy-connect-timeout: '5'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '65'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '65'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - platform.agogos.org
        - dev.agogos.org
        - staging.agogos.org
      secretName: agogos-platform-web-tls
  rules:
    - host: platform.agogos.org
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: agogos-api
                port:
                  name: http
          - path: /
            pathType: Prefix
            backend:
              service:
                name: agogos-web
                port:
                  name: http
    - host: dev.agogos.org
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: agogos-api
                port:
                  name: http
          - path: /
            pathType: Prefix
            backend:
              service:
                name: agogos-web
                port:
                  name: http
    - host: staging.agogos.org
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: agogos-api
                port:
                  name: http
          - path: /
            pathType: Prefix
            backend:
              service:
                name: agogos-web
                port:
                  name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: agogos-platform-api
  annotations:
    argocd.argoproj.io/sync-wave: '1'
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/limit-burst: '40'
    nginx.ingress.kubernetes.io/limit-rps: '20'
    nginx.ingress.kubernetes.io/proxy-body-size: '1m'
    nginx.ingress.kubernetes.io/proxy-connect-timeout: '5'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '65'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '65'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.agogos.org
        - api.dev.agogos.org
        - api.staging.agogos.org
      secretName: agogos-platform-api-tls
  rules:
    - host: api.agogos.org
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: agogos-api
                port:
                  name: http
    - host: api.dev.agogos.org
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: agogos-api
                port:
                  name: http
    - host: api.staging.agogos.org
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: agogos-api
                port:
                  name: http
